--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -107,19 +107,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On remarque que le vecteur $T = \\frac {1} {\\|\\nabla f(x_0)\\|} \\begin{pmatrix} \\partial_2 f(x_0) \\\\ -\\partial_1 f(x_0) \\end{pmatrix}$ est le vecteur normalisé orthogonal au gradient donc tangent à la courbe au point $x_0$. Ainsi, $p(x_1,x_2)$ correspond au produit scalaire entre $T$ et le vecteur $MM_0 = \\begin{pmatrix} x_1 - x_{10} \\\\ x_2 - x_{20} \\end{pmatrix}$, ce qui géométriquement correspond à la projection orthogonale de $MM_0$ sur  $T$. "
+    "On remarque que le vecteur $T = \\frac {1} {\\|\\nabla f(x_0)\\|} \\begin{pmatrix} \\partial_2 f(x_0) \\\\ -\\partial_1 f(x_0) \\end{pmatrix}$ est le vecteur normalisé orthogonal au gradient donc tangent à la courbe au point $x_0$. Ainsi, $p(x_1,x_2)$ correspond au produit scalaire entre $T$ et le vecteur $MM_0 = \\begin{pmatrix} x_1 - x_{10} \\\\ x_2 - x_{20} \\end{pmatrix}$, ce qui géométriquement correspond à la projection orthogonale de $MM_0$ sur  $T$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 3"
+    "#### Question 3\n",
+    "\n",
+    "On pose $ \\phi : \\mathbb{R}^2 \\times \\mathbb{R} \\to \\mathbb{R}^2$ telle que $ \\forall (x,t) \\in \\mathbb{R}^2 \\times \\mathbb{R},  \\phi(x,t) = \\begin{pmatrix} f(x) - c \\\\ t - p(x) \\end{pmatrix}$. $f$ est continûment différentiable par hypothèse, et $\\phi$ l'est car polynomiale en les coefficents de $x$.   \n",
+    "     \n",
+    "Vérifions les hypothèses du théorème des fonctions implicites :  \n",
+    "- $\\phi(x_0,p(x_0)) = 0$ \n",
+    "- Soit $\\partial_x \\phi(x_0,p(x_0))= \\begin{pmatrix} \\partial_1 f(x_0)& \\partial_2 f(x_0) \\\\ -\\frac {\\partial_2 f(x_0)} {\\|\\nabla f(x_0)\\|} & \\frac {\\partial_1 f(x_0)} {\\|\\nabla f(x_0)\\|} \\end{pmatrix}$.    \n",
+    "On remarque alors que $det(\\partial_x \\phi(x_0,p(x_0))) = \\|\\nabla f(x_0)\\| \\ne 0$     \n",
+    "    \n",
+    "Le théorème dans sa version étendue s'applique, donc il existe $\\varepsilon > 0$ et un voisinage ouvert $U$ de $x_0$ et $\\gamma : \\mathbb{R} \\to \\mathbb{R}^2$ continûment différentiable telle que $\\forall t \\in ]-\\varepsilon,\\varepsilon[ $ et $ \\forall x \\in U \\ \\phi(x,t) = 0 \\Leftrightarrow (x_1,x_2) = \\gamma(t)$, et comme lorsque $\\phi(x,t)=0, \\ t=p(x)$, on obtient bien le résultat demandé."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Question 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construction des courbes de niveau"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 5 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 100\n",
+    "eps = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tâche 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Newton(F, x0, y0, eps = eps, N = N) :\n",
+    "    \n",
+    "    for i in range(N) :\n",
+    "        \n",
+    "        if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps:\n",
+    "            return x, y\n",
+    "        x0, y0 = x, y\n",
+    "    raise ValueError(f\"no convergence in {N} steps.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tâche 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Génération des points\n",
+    "\n",
+    "#### Question 6 et Tâche 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bouclage et auto-intersection\n",
+    "\n",
+    "#### Question 7 et Tâche 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
