--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -23,17 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Python Standard Libraries\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Third-Party Libraries\n",
+    "\n",
+    "import autograd\n",
+    "import autograd.numpy as np\n",
+    "from autograd.numpy import linalg"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,16 +130,31 @@
     "Vérifions les hypothèses du théorème des fonctions implicites :  \n",
     "- $\\phi(x_0,p(x_0)) = 0$ \n",
     "- Soit $\\partial_x \\phi(x_0,p(x_0))= \\begin{pmatrix} \\partial_1 f(x_0)& \\partial_2 f(x_0) \\\\ -\\frac {\\partial_2 f(x_0)} {\\|\\nabla f(x_0)\\|} & \\frac {\\partial_1 f(x_0)} {\\|\\nabla f(x_0)\\|} \\end{pmatrix}$.    \n",
-    "On remarque alors que $det(\\partial_x \\phi(x_0,p(x_0))) = \\|\\nabla f(x_0)\\| \\ne 0$     \n",
+    "       \n",
+    "On remarque alors que $det(\\partial_x \\phi(x_0,p(x_0))) = \\|\\nabla f(x_0)\\| \\ne 0$, donc $\\partial_x \\phi(x_0,p(x_0))$ est bien inversible.    \n",
     "    \n",
-    "Le théorème dans sa version étendue s'applique, donc il existe $\\varepsilon > 0$ et un voisinage ouvert $U$ de $x_0$ et $\\gamma : \\mathbb{R} \\to \\mathbb{R}^2$ continûment différentiable telle que $\\forall t \\in ]-\\varepsilon,\\varepsilon[ $ et $ \\forall x \\in U \\ \\phi(x,t) = 0 \\Leftrightarrow (x_1,x_2) = \\gamma(t)$, et comme lorsque $\\phi(x,t)=0, \\ t=p(x)$, on obtient bien le résultat demandé."
+    "Le théorème dans sa version étendue s'applique, donc il existe un voisinage ouvert de $p(x_{10},x_{20})=0$, c'est-à-dire un intervalle $]-\\varepsilon,\\varepsilon[$, avec $\\varepsilon > 0$ et un voisinage ouvert $U$ de $x_0$ et $\\gamma : \\mathbb{R} \\to \\mathbb{R}^2$ continûment différentiable telle que $\\forall t \\in ]-\\varepsilon,\\varepsilon[ $ et $ \\forall x \\in U \\ \\phi(x,t) = 0 \\Leftrightarrow (x_1,x_2) = \\gamma(t)$, et comme lorsque $\\phi(x,t)=0, \\ t=p(x)$, on obtient bien le résultat demandé."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 4"
+    "#### Question 4\n",
+    "\n",
+    "Soit $t \\in ]-\\varepsilon,\\varepsilon[$,\n",
+    "\n",
+    "- Montrons que $\\gamma'(t)$ est non nul :      \n",
+    "Le théorème des fonctions implicites, que l'on a utilisé à la question précédente pour obtenir la fonction $\\gamma$, nous donne :      \n",
+    "$ \\forall t \\in ]-\\varepsilon,\\varepsilon[, \\ \\gamma'(t) = [\\partial_x \\phi(y,t)]^{-1} \\cdot \\partial_t \\phi(y,t) $, avec $y = p(x_1,x_2)$.        \n",
+    "Or, $\\forall (x,t) \\in \\mathbb{R}^2 \\times \\mathbb{R} , \\ \\partial_t \\phi(x,t) = \\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$, ce qui signifie que $\\gamma'(t)$ est la deuxième colonne de $[\\partial_x \\phi(y,t)]^{-1}$, qui est effectivement non nul car sinon le déterminant de $[\\partial_x \\phi(y,t)]^{-1}$ serait nul.\n",
+    "\n",
+    "             \n",
+    "- Montrons que $\\gamma(t)$ est orthogonal à $\\nabla f(\\gamma(t))$, c'est-à-dire que $<\\nabla f(\\gamma(t)),\\gamma(t)> \\, = 0$ :      \n",
+    "Par définition, $f \\circ \\gamma \\circ p(x_1,x_2) \\, = c$, donc en différenciant, on obtient : \n",
+    "$ \\nabla f(\\gamma(t))^{T} \\cdot \\gamma'(t) \\cdot \\nabla p(x_1,x_2)^{T} \\, = 0 $, où $t=p(x_1,x_2)$.    \n",
+    "Or, par définition, $\\nabla p(x_1,x_2) \\, = \\frac {1} {\\|\\nabla f(x_0)\\|} \\begin{pmatrix} \\partial_2 f(x_0) \\\\ -\\partial_1 f(x_0) \\end{pmatrix}$. Comme on suppose $\\nabla f$ non nul sur un voisinage de $x_0$, $\\nabla p(x_1,x_2) \\ne 0$.      \n",
+    "On en déduit donc que $\\nabla f(\\gamma(t))^{T} \\cdot \\gamma'(t)=0$, ce qui est bien le résultat voulu."
    ]
   },
   {
@@ -154,7 +178,7 @@
    "outputs": [],
    "source": [
     "N = 100\n",
-    "eps = 1"
+    "eps = 1e-8"
    ]
   },
   {
@@ -179,9 +203,18 @@
     "    \n",
     "    for i in range(N) :\n",
     "        \n",
+    "        J_F = J(F)(x0, y0)\n",
+    "        X0 = np.array([[x0], [y0]])\n",
+    "        M = linalg.inv(J_F)\n",
+    "        \n",
+    "        X = X0 - F(x0, y0) * M\n",
+    "        x, y = X[0], X[1]        \n",
+    "        \n",
     "        if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps:\n",
     "            return x, y\n",
+    "        \n",
     "        x0, y0 = x, y\n",
+    "    \n",
     "    raise ValueError(f\"no convergence in {N} steps.\")"
    ]
   },
@@ -197,7 +230,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def f(x, y, c) :\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    \n",
+    "    return 3.0 * x*x - 2.0 * x*y + 3.0 * y*y - c\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
