Corrections sur la question 4

--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -150,11 +150,9 @@
     "Or, $\\forall (x,t) \\in \\mathbb{R}^2 \\times \\mathbb{R} , \\ \\partial_t \\phi(x,t) = \\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$, ce qui signifie que $\\gamma'(t)$ est la deuxième colonne de $[\\partial_x \\phi(y,t)]^{-1}$, qui est effectivement non nul car sinon le déterminant de $[\\partial_x \\phi(y,t)]^{-1}$ serait nul.\n",
     "\n",
     "             \n",
-    "- Montrons que $\\gamma(t)$ est orthogonal à $\\nabla f(\\gamma(t))$, c'est-à-dire que $<\\nabla f(\\gamma(t)),\\gamma(t)> \\, = 0$ :      \n",
-    "Par définition, $f \\circ \\gamma \\circ p(x_1,x_2) \\, = c$, donc en différenciant, on obtient : \n",
-    "$ \\nabla f(\\gamma(t))^{T} \\cdot \\gamma'(t) \\cdot \\nabla p(x_1,x_2)^{T} \\, = 0 $, où $t=p(x_1,x_2)$.    \n",
-    "Or, par définition, $\\nabla p(x_1,x_2) \\, = \\frac {1} {\\|\\nabla f(x_0)\\|} \\begin{pmatrix} \\partial_2 f(x_0) \\\\ -\\partial_1 f(x_0) \\end{pmatrix}$. Comme on suppose $\\nabla f$ non nul sur un voisinage de $x_0$, $\\nabla p(x_1,x_2) \\ne 0$.      \n",
-    "On en déduit donc que $\\nabla f(\\gamma(t))^{T} \\cdot \\gamma'(t)=0$, ce qui est bien le résultat voulu."
+    "- Montrons que $\\gamma'(t)$ est orthogonal à $\\nabla f(\\gamma(t))$, c'est-à-dire que $<\\nabla f(\\gamma(t)),\\gamma(t)> \\, = 0$ :      \n",
+    "Par définition, $\\forall t \\in ]-\\varepsilon,\\varepsilon[, \\ f \\circ \\gamma(t) \\, = c$, donc en différenciant, on obtient : \n",
+    "$ \\nabla f(\\gamma(t))^{T} \\cdot \\gamma'(t) \\, = 0 $, ce qui est bien le résultat voulu."
    ]
   },
   {
