Début de la tâche 2

--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "L'algorithme de Newton est peu sensible aux erreurs d'arrondi car il converge rapidement pour autant qu'on soit relativement proche de la racine cherchée. Par conséquent, il n'y a pas besoin de choisir une valeur de `eps` trop petite. Comme dans l'exemple du cours sur les différences finies, on peut prendre `eps = 1e-8` pour éviter à la fois les erreurs de troncature et d'arrondi."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +210,7 @@
     "        X = X0 - F(x0, y0) * M\n",
     "        x, y = X[0], X[1]        \n",
     "        \n",
-    "        if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps:\n",
+    "        if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps or abs(F(x,y)) <= eps :\n",
     "            return x, y\n",
     "        \n",
     "        x0, y0 = x, y\n",
@@ -220,21 +222,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tâche 2"
+    "#### Tâche 2\n",
+    "\n",
+    "On remarque que le graphe de la fonction $f_1$ est symétrique par rapport aux deux bissectrices. On modélise la contrainte entre $x_1$ et $x_2$ par un facteur $k$ tel que $x = ky$. Les symétries montrent qu'il suffit de prendre $k$ dans l'intervalle $[-1,1]$. Si on trouve le point $(x, y)$ tel que $x = ky$ et $f(x,y) = c$ on sait que $(-x,y), \\ (x,-y)$ et $(-x,-y)$ sont sur la même courbe de niveau. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7600000000000005"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def f(x, y, c) :\n",
     "    x = np.array(x)\n",
     "    y = np.array(y)\n",
     "    \n",
     "    return 3.0 * x*x - 2.0 * x*y + 3.0 * y*y - c\n",
-    "\n"
+    "\n",
+    "# On recode Newton en ajoutant la possibilité de mettre une contrainte entre x1 et x2\n",
+    "\n",
+    "def Newton_2(F, x0, y0, eps = eps, N = N, k = 'pas de contrainte') :\n",
+    "    \n",
+    "    if k == 'pas de contrainte' :\n",
+    "        return Newton(F, x0, y0, eps = eps, N = N)\n",
+    "    \n",
+    "    else :\n",
+    "        \n",
+    "        def F_2(F, k) :\n",
+    "            \n",
+    "            def F2(x, y):\n",
+    "                return np.array([F(x,y), x - k*y])\n",
+    "            \n",
+    "            return F2\n",
+    "        \n",
+    "        F_2 = F_2(F, k)\n",
+    "        \n",
+    "        for i in range(N) :\n",
+    "        \n",
+    "            J_F2 = J(F_2)(x0, y0)\n",
+    "            X0 = np.array([[x0], [y0]])\n",
+    "            M = linalg.inv(J_F2)\n",
+    "\n",
+    "            X = X0 - F_2(x0, y0) * M\n",
+    "            x, y = X[0], X[1]        \n",
+    "\n",
+    "            if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps or linalg.norm(F_2(x,y)) <= eps :\n",
+    "                return x, y\n",
+    "\n",
+    "            x0, y0 = x, y\n",
+    "\n",
+    "        raise ValueError(f\"no convergence in {N} steps.\")\n",
+    "\n",
+    "Coord = []\n",
+    "\n",
+    "x1, y1 = Newton_2(F, 0.8, 0.8, k = 1)\n",
+    "Coord.append((x1,y1))\n",
+    "\n",
+    "x2, y2 = Newton_2(F, -0.3, 0.3, k = -1)\n",
+    "Coord.append\n",
+    "\n",
+    "x3, y3 = Newton_2(F, 0.0, 0.5, k = 0)\n",
+    "\n",
+    "Coord.append()"
    ]
   },
   {
