Ajout du pseudo de Buvot

--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -218,7 +218,7 @@
     "        X0 = np.array([[x0], [y0]])\n",
     "        M = linalg.inv(J_F)\n",
     "        \n",
-    "        X = X0 - F(x0, y0) * M\n",
+    "        X = X0 - M * F(x0, y0)\n",
     "        x, y = X[0], X[1]        \n",
     "        \n",
     "        if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps or abs(F(x,y)) <= eps :\n",
@@ -242,9 +242,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "tags": [
-     "level_advanced"
-    ]
+    "tags": []
    },
    "outputs": [
     {
@@ -293,7 +291,7 @@
     "            X0 = np.array([[x0], [y0]])\n",
     "            M = linalg.inv(J_F2)\n",
     "\n",
-    "            X = X0 - F_2(x0, y0) * M\n",
+    "            X = X0 - F_2(x0, y0)\n",
     "            x, y = X[0], X[1]        \n",
     "\n",
     "            if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps or linalg.norm(F_2(x,y)) <= eps :\n",
@@ -306,19 +304,20 @@
     "\n",
     "## \n",
     "\n",
-    "Points_ref = np.array([(0.40, 0.40), (-0.40,-0.40), (-0.50, 0), (0.50,0), (0, -0.50), (0, 0.50), (0.33, -0.33), (-0.33, 0.33)])\n",
-    "solution_x = np.array([])\n",
-    "solution_y = np.array([])\n",
+    "Points_ref = np.array([ (0.40, 0.40), (-0.40,-0.40), (-0.50, 0), (0.50,0), (0, -0.50), (0, 0.50), (0.33, -0.33), (-0.33, 0.33)])\n",
     "\n",
-    "for point in Points_ref:\n",
-    "    if Newton_2(f, point[0], point[1]) not in solution:\n",
-    "        solution_x.append(point[0])\n",
-    "        solution_y.append(point[1])\n",
+    "def graph_solutions(k):\n",
     "\n",
-    "plt.open()\n",
-    "plt.plot(solution_x, solution_y)\n",
-    "plt.show()\n",
-    "    "
+    "    plt.open()\n",
+    "    solution_x = np.array([])\n",
+    "    solution_y = np.array([])\n",
+    "    for point in Points_ref:\n",
+    "        if Newton_2(f, point[0], point[1],k) not in solution:\n",
+    "            solution_x.append(point[0])\n",
+    "            solution_y.append(point[1])\n",
+    "\n",
+    "    plt.plot(solution_x, solution_y)\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -328,6 +327,15 @@
     "### Génération des points\n",
     "\n",
     "#### Question 6 et Tâche 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour cette question 6, on va chercher les 0 consécutifs de fonctions définies à l'aide des points successifs $(x_0, y_0),\\:  \\cdots,\\: (x_{N-1}, y_{N-1}) $ comme $F_{x_i, y_i} : (x,y) \\in \\mathbb{R}^2 \\mapsto \\begin{pmatrix}(x-x_i)^2 \\: +\\: (y-y_i)^2\\:-\\:  \\delta ^2\\\\ f(x,y)\\: -\\: c\\end{pmatrix}$ \n",
+    "\n",
+    "  Pour que l'on s'oriente \"à droite\" quand on est en $(x_i, y_i)$ en regardant dans la direction du gradient de f en ce point, on doit aussi ajouter la condition $\\left \\langle \\begin{pmatrix}\\frac{\\partial }{\\partial y}f(x_i, y_i)\\\\ -\\frac{\\partial }{\\partial x}f(x_i, y_i)\\end{pmatrix}, \\begin{pmatrix}x_{i+1}\\: -\\:x_i \\\\ y_{i+1}\\: -\\: y_i\\end{pmatrix} \\right \\rangle\\: > 0,\\:$ avec $i\\: \\in \\: \\{0,\\:  \\cdots,\\:  N-1\\}$ et où $(x_{i+1}, y_{i+1})$ a été déterminé avec la méthode de Newton adaptée à la fonction $F_{x_i, y_i}$."
    ]
   },
   {
