--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -23,36 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python Standard Libraries\n"
+    "# Python Standard Libraries\n",
+    "import math\n",
+    "from math import isclose"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'autograd'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-29a4c954aa63>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Third-Party Libraries\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mautograd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumpy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'autograd'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Third-Party Libraries\n",
     "\n",
     "import autograd\n",
     "import autograd.numpy as np\n",
-    "from autograd.numpy import linalg"
+    "from autograd.numpy import linalg\n",
+    "\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -64,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,12 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 100\n",
-    "eps = 1e-8"
+    "eps = 1e-4"
    ]
   },
   {
@@ -206,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +211,7 @@
     "        X0 = np.array([[x0], [y0]])\n",
     "        M = linalg.inv(J_F)\n",
     "        \n",
-    "        X = X0 - M * F(x0, y0)\n",
+    "        X = X0 - M.dot(F(x0, y0))\n",
     "        x, y = X[0], X[1]        \n",
     "        \n",
     "        if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps or abs(F(x,y)) <= eps :\n",
@@ -233,96 +226,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tâche 2\n",
-    "\n",
-    "On remarque que le graphe de la fonction $f_1$ est symétrique par rapport aux deux bissectrices. On modélise la contrainte entre $x_1$ et $x_2$ par un facteur $k$ tel que $x = ky$. Les symétries montrent qu'il suffit de prendre $k$ dans l'intervalle $[-1,1]$. Si on trouve le point $(x, y)$ tel que $x = ky$ et $f(x,y) = c$ on sait que $(-x,y), \\ (x,-y)$ et $(-x,-y)$ sont sur la même courbe de niveau. "
+    "#### Tâche 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 176,
    "metadata": {
-    "tags": []
+    "tags": [
+     "level_advanced"
+    ]
    },
+   "outputs": [],
+   "source": [
+    "Points_ref = np.array([ (0.40, 0.40), (-0.40,-0.40), (-0.50, 0), (0.50,0), (0, -0.50), (0, 0.50), (0.33, -0.33), (-0.33, 0.33)])\n",
+    "\n",
+    "def f(x, y) :\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    \n",
+    "    return 3.0*x*x - 2.0*x*y + 3.0*y*y - 0.8\n",
+    "\n",
+    "# On recode Newton en ajoutant la possibilité de mettre une contrainte entre x1 et x2\n",
+    "\n",
+    "def Newton_2(F, x0, y0, eps = eps, N = N, k = 1) :\n",
+    "        \n",
+    "    def F_2(F, k) :\n",
+    "            \n",
+    "        def F2(x, y):\n",
+    "            return np.array([F(x,y), x - k*y])\n",
+    "            \n",
+    "        return F2\n",
+    "        \n",
+    "    F_2 = F_2(F, k)\n",
+    "        \n",
+    "    for i in range(N) :\n",
+    "        \n",
+    "        J_F2 = J(F_2)(x0, y0)\n",
+    "        X0 = np.array([[x0], [y0]])\n",
+    "        M = linalg.inv(J_F2)\n",
+    "\n",
+    "        X = X0 - M.dot(F_2(x0, y0))\n",
+    "        x, y = X[0][0], X[0][1]      \n",
+    "\n",
+    "        if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps or np.linalg.norm(F_2(x,y)) <= eps:\n",
+    "            return x, y\n",
+    "\n",
+    "        x0, y0 = x, y\n",
+    "\n",
+    "    raise ValueError(f\"no convergence in {N} steps.\")\n",
+    "\n",
+    "def graph_solutions(q = 1):\n",
+    "\n",
+    "    solution_x = []\n",
+    "    solution_y = []\n",
+    "    solution = []\n",
+    "    for point in Points_ref:\n",
+    "        if (2 - 6*q)*point[0] != (6 - 2*q)*point[1]:\n",
+    "            try:\n",
+    "                x, y = Newton_2(f, point[0], point[1], k = q)\n",
+    "                print(x,y)\n",
+    "                if isclose(x, q*y):\n",
+    "                    if (x, y) not in solution:\n",
+    "                        solution.append((x, y))\n",
+    "                        solution_x.append(x)\n",
+    "                        solution_y.append(y)\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "    plt.scatter(solution_x, solution_y)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'autograd' is not defined",
+     "ename": "ValueError",
+     "evalue": "no convergence in 100 steps.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-188e4328130c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mpoint\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mPoints_ref\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mNewton_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msolution\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m         \u001b[0msolution_x\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0msolution_y\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-10-188e4328130c>\u001b[0m in \u001b[0;36mNewton_2\u001b[1;34m(F, x0, y0, eps, N, k)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'pas de contrainte'\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mNewton\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mF\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0meps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32melse\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-9-a7ce5fef9f1c>\u001b[0m in \u001b[0;36mNewton\u001b[1;34m(F, x0, y0, eps, N)\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mJ_F\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mJ\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mF\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mX0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0my0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mM\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mJ_F\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-b5c74ed9859c>\u001b[0m in \u001b[0;36mJ\u001b[1;34m(f)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mJ\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjacobian\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mJ_f\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mJ_f\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'autograd' is not defined"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-181-bdf3cef090a3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mNewton_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.33\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m0.33\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-176-8cc860d52f3c>\u001b[0m in \u001b[0;36mNewton_2\u001b[1;34m(F, x0, y0, eps, N, k)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"no convergence in {N} steps.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgraph_solutions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: no convergence in 100 steps."
      ]
     }
    ],
    "source": [
-    "def f(x, y, c) :\n",
-    "    x = np.array(x)\n",
-    "    y = np.array(y)\n",
-    "    \n",
-    "    return 3.0 * x*x - 2.0 * x*y + 3.0 * y*y - c\n",
-    "\n",
-    "# On recode Newton en ajoutant la possibilité de mettre une contrainte entre x1 et x2\n",
-    "\n",
-    "def Newton_2(F, x0, y0, eps = eps, N = N, k = 'pas de contrainte') :\n",
-    "    \n",
-    "    if k == 'pas de contrainte' :\n",
-    "        return Newton(F, x0, y0, eps = eps, N = N)\n",
-    "    \n",
-    "    else :\n",
-    "        \n",
-    "        def F_2(F, k) :\n",
-    "            \n",
-    "            def F2(x, y):\n",
-    "                return np.array([F(x,y), x - k*y])\n",
-    "            \n",
-    "            return F2\n",
-    "        \n",
-    "        F_2 = F_2(F, k)\n",
-    "        \n",
-    "        for i in range(N) :\n",
-    "        \n",
-    "            J_F2 = J(F_2)(x0, y0)\n",
-    "            X0 = np.array([[x0], [y0]])\n",
-    "            M = linalg.inv(J_F2)\n",
-    "\n",
-    "            X = X0 - F_2(x0, y0)\n",
-    "            x, y = X[0], X[1]        \n",
-    "\n",
-    "            if np.sqrt((x - x0)**2 + (y - y0)**2) <= eps or linalg.norm(F_2(x,y)) <= eps :\n",
-    "                return x, y\n",
-    "\n",
-    "            x0, y0 = x, y\n",
-    "\n",
-    "        raise ValueError(f\"no convergence in {N} steps.\")\n",
-    "\n",
-    "\n",
-    "## \n",
-    "\n",
-    "Points_ref = np.array([ (0.40, 0.40), (-0.40,-0.40), (-0.50, 0), (0.50,0), (0, -0.50), (0, 0.50), (0.33, -0.33), (-0.33, 0.33)])\n",
-    "\n",
-    "def graph_solutions(k):\n",
-    "\n",
-    "    plt.open()\n",
-    "    solution_x = np.array([])\n",
-    "    solution_y = np.array([])\n",
-    "    for point in Points_ref:\n",
-    "        if Newton_2(f, point[0], point[1],k) not in solution:\n",
-    "            solution_x.append(point[0])\n",
-    "            solution_y.append(point[1])\n",
-    "\n",
-    "    plt.plot(solution_x, solution_y)\n",
-    "    plt.show()\n"
+    "Newton_2(f, 0.33, -0.33, k = -1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "### Génération des points\n",
     "\n",
