--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -23,13 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Python Standard Libraries\n",
     "import math\n",
-    "from math import isclose"
+    "from math import isclose\n",
+    "from random import random"
    ]
   },
   {
@@ -175,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 100\n",
-    "eps = 1e-4"
+    "eps = 1e-6"
    ]
   },
   {
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 198,
    "metadata": {
     "tags": [
      "level_advanced"
@@ -293,30 +294,31 @@
     "                        solution_y.append(y)\n",
     "            except ValueError:\n",
     "                pass\n",
+    "            \n",
     "    plt.scatter(solution_x, solution_y)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "no convergence in 100 steps.",
+     "evalue": "no convergence in 1000 steps.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-181-bdf3cef090a3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mNewton_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.33\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m0.33\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-176-8cc860d52f3c>\u001b[0m in \u001b[0;36mNewton_2\u001b[1;34m(F, x0, y0, eps, N, k)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"no convergence in {N} steps.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgraph_solutions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: no convergence in 100 steps."
+      "\u001b[1;32m<ipython-input-199-afa9ba51e022>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mNewton_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-198-0caf0aaefc45>\u001b[0m in \u001b[0;36mNewton_2\u001b[1;34m(F, x0, y0, eps, N, k)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"no convergence in {N} steps.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgraph_solutions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: no convergence in 1000 steps."
      ]
     }
    ],
    "source": [
-    "Newton_2(f, 0.33, -0.33, k = -1)"
+    "Newton_2(f, 0.1, 0.2, k = 0.5)"
    ]
   },
   {
