--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -371,7 +371,9 @@
    "source": [
     "### Bouclage et auto-intersection\n",
     "\n",
-    "#### Question 7 et Tâche 4"
+    "#### Question 7 et Tâche 4\n",
+    "\n",
+    "Dans la fonction $f_3$, on remarque un point d'auto-intersection de coordonnées `(0.5, 0.0)`. De plus, on voit que la fonction partielle $ x_1 \\mapsto f_3(x_1, \\, 0)$ admet un maximum en `(0.5, 0.0)`, et la deuxième fonction partielle $x_2 \\mapsto f_3(0.5, \\, x_2)$ admet un minimum en `(0.5, 0.0)`. Ce point est donc un point selle. Cette situation étant relativement rare, on peut se permettre de vérifier seulement l'appartenance des nouveaux points construits au premier segment."
    ]
   },
   {
