--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "level_advanced"
@@ -244,7 +244,7 @@
      "output_type": "stream",
      "text": [
       "Le point de la courbe de niveau c = 0.8, respectant la condition x1 = x2, et obtenu à partir des conditions\n",
-      "initiales x10 = x20 = 0.8, est le point de coordonnées (0.4472135954999579, 0.4472135954999579)\n"
+      "initiales x10 = x20 = 0.8, est le point de coordonnées (0.447, 0.447)\n"
      ]
     },
     {
@@ -281,8 +281,9 @@
     "    y = np.array(y)\n",
     "    return 3.0*x*x - 2.0*x*y + 3.0*y*y - 0.8\n",
     "\n",
+    "x, y = Newton_2(f, 0.8, 0.8)\n",
     "print(f\"\"\"Le point de la courbe de niveau c = 0.8, respectant la condition x1 = x2, et obtenu à partir des conditions\n",
-    "initiales x10 = x20 = 0.8, est le point de coordonnées {Newton_2(f, 0.8, 0.8)}\"\"\")\n",
+    "initiales x10 = x20 = 0.8, est le point de coordonnées ({x:.3f}, {y:.3f})\"\"\")\n",
     "\n",
     "X = []\n",
     "Y = []\n",
@@ -316,7 +317,7 @@
    "source": [
     "Pour cette question 6, on va chercher les 0 consécutifs de fonctions définies à l'aide des points successifs $(x_0, y_0),\\:  \\cdots,\\: (x_{N-1}, y_{N-1}) $ comme $F_{x_i, y_i} : (x,y) \\in \\mathbb{R}^2 \\mapsto \\begin{pmatrix}(x-x_i)^2 \\: +\\: (y-y_i)^2\\:-\\:  \\delta ^2\\\\ f(x,y)\\: -\\: c\\end{pmatrix}$ \n",
     "\n",
-    "  Pour que l'on s'oriente \"à droite\" quand on est en $(x_i, y_i)$ en regardant dans la direction du gradient de f en ce point, on doit prendre pour point de départ dans la recherche de Newton un point \"à droite\" de celui qu'on a déjà. Pour cela, on prend le point $(x_{depart}, y_{depart})$ tel que $\\begin{pmatrix}x_{depart}\\\\ y_{depart}\\end{pmatrix}\\: =\\: \\begin{pmatrix}x_i\\\\ y_i\\end{pmatrix}\\: +\\: \\frac{\\delta }{\\left \\|\\triangledown f(x_i, y_i) \\right \\|}\\begin{pmatrix}\\partial_yf(x_i, y_i)\\\\ -\\partial_xf(x_i, y_i)\\end{pmatrix}$ où on à effectuer une rotation d'angle $-\\frac{\\pi }{2}"
+    "  Pour que l'on s'oriente \"à droite\" quand on est en $(x_i, y_i)$ en regardant dans la direction du gradient de f en ce point, on doit prendre pour point de départ dans la recherche de Newton un point \"à droite\" de celui qu'on a déjà. Pour cela, on prend le point $(x_{depart}, y_{depart})$ tel que $\\begin{pmatrix}x_{depart}\\\\ y_{depart}\\end{pmatrix}\\: =\\: \\begin{pmatrix}x_i\\\\ y_i\\end{pmatrix}\\: +\\: \\frac{\\delta }{\\left \\|\\triangledown f(x_i, y_i) \\right \\|}\\begin{pmatrix}\\partial_yf(x_i, y_i)\\\\ -\\partial_xf(x_i, y_i)\\end{pmatrix}$ où on a effectué une rotation d'angle $-\\frac{\\pi }{2}$."
    ]
   },
   {
@@ -373,7 +374,12 @@
     "\n",
     "#### Question 7 et Tâche 4\n",
     "\n",
-    "Dans la fonction $f_3$, on remarque un point d'auto-intersection de coordonnées `(0.5, 0.0)`. De plus, on voit que la fonction partielle $ x_1 \\mapsto f_3(x_1, \\, 0)$ admet un maximum en `(0.5, 0.0)`, et la deuxième fonction partielle $x_2 \\mapsto f_3(0.5, \\, x_2)$ admet un minimum en `(0.5, 0.0)`. Ce point est donc un point selle. Cette situation étant relativement rare, on peut se permettre de vérifier seulement l'appartenance des nouveaux points construits au premier segment."
+    "Dans la fonction $f_3$, on remarque un point d'auto-intersection de coordonnées `(0.5, 0.0)`. De plus, on voit que la fonction partielle $ x_1 \\mapsto f_3(x_1, \\, 0)$ admet un maximum en `(0.5, 0.0)`, et la deuxième fonction partielle $x_2 \\mapsto f_3(0.5, \\, x_2)$ admet un minimum en `(0.5, 0.0)`. Ce point est donc un point selle. Cette situation étant relativement rare, on peut se permettre de vérifier seulement l'appartenance des nouveaux points construits au premier segment.     \n",
+    "Le premier point de la courbe de niveau est $M_0 \\, = \\, (x_0, \\, y_0)$, le deuxième est $M_1 \\, = \\, (x_1, \\, y_1)$. Pour tester l'appartenance du point $M_i \\, = \\, (x_i, \\, y_i)$ au segment $M_0M_1$, on peut vérifier que le système $ \\begin{cases} \n",
+    "    \\lambda + \\mu & = & 1 \\\\\n",
+    "    M_i & = & \\lambda M_0 + \\mu M_1\n",
+    "\\end{cases}$\n",
+    "admet une solution, avec $(\\lambda, \\mu) \\in [0, 1]^2$."
    ]
   },
   {
