--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -388,6 +388,46 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tâche 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Post-traitement\n",
+    "\n",
+    "### Interpolation\n",
+    "\n",
+    "#### Question 8\n",
+    "\n",
+    "On veut une fonction $\\gamma : [0,1] \\rightarrow \\mathbb{R}^2$ continûment différentiable et telle que, en prenant des points $P_1 \\: et \\: P_2$ et des vecteurs non nuls $u_1 \\: et \\: u_2 \\: de \\: \\mathbb{R}^2$, on a $\\left\\{\\begin{matrix}\\gamma (0) = P_1\\\\ \\gamma (1) = P_2\\end{matrix}\\right.$, $\\gamma '(0)$ positivement colinéaire à $u_1$ et $\\gamma '(1)$ positivement colinéaire à $u_2$.\n",
+    "\n",
+    "   En cherchant $\\gamma (t)$ sous la forme $\\gamma (t) = \\begin{pmatrix}a + bt + ct^2\\\\ d + et + ft^2\\end{pmatrix}$, on a $\\gamma '(t) = \\begin{pmatrix}b + 2ct\\\\ e + 2ft\\end{pmatrix}$\n",
+    "   \n",
+    "   On a donc les conditions suivantes: $\\left\\{\\begin{matrix}\\begin{pmatrix}a\\\\ d\\end{pmatrix} = \\overrightarrow{OP_1}\\\\ \\begin{pmatrix}a+b+c\\\\ d + e +f\\end{pmatrix} = \\overrightarrow{OP_2}\\\\\\begin{pmatrix}b\\\\ e\\end{pmatrix} = \\alpha u_1 \\\\ \\begin{pmatrix}b + 2c\\\\ e + 2f\\end{pmatrix} = \\beta u_2\\end{matrix}\\right.$, où $(\\alpha, \\beta) \\: \\in \\: (\\mathbb{R}^{+*})^2$.\n",
+    "   \n",
+    "   Au moins une solution existe s'il existe $(\\alpha, \\beta) \\: \\in \\: (\\mathbb{R}^{+*})^2$ tels que $\\overrightarrow{P_1P_2} = \\frac{1}{2}(\\beta u_2 + \\alpha u_1)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
